--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <script src="./app.js"></script>
 </head>
 <body>
-    <div class="loader">
-        Happy Birthday
+    <div class="loading">
+        <h2>2018</h2>
+        <div class="bar"></div>
+        <h2>2019</h2>
+    </div>
+    <div class="center">
+        <div><h2>Happy Birthday</h2></div>
+        <div></div>
+        <div><h2>Name.....</h2></div>
+        <div></div>
     </div>
 </body>
 </html>
