--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <script src="./app.js"></script>
 </head>
 <body>
-    <div class="loading">
+    <!-- <div class="loading">
         <h2>2018</h2>
         <div class="bar"></div>
         <h2>2019</h2>
-    </div>
+    </div> -->
     <div class="center">
         <div><h2>Happy Birthday</h2></div>
         <div></div>
-        <div><h2>Name.....</h2></div>
+        <div><h2>Name...</h2></div>
         <div></div>
     </div>
 </body>
