--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Happy Birthday</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.0.2/dist/confetti.browser.min.js"></script>
     <script src="./app.js"></script>
 </head>
 <body>
