--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="./app.js"></script>
 </head>
 <body>
-    <!-- <div class="loading">
+    <div class="loading">
         <h2>2018</h2>
         <div class="bar"></div>
         <h2>2019</h2>
-    </div> -->
+    </div>
     <div class="center">
         <div><h2>Happy Birthday</h2></div>
         <div></div>
