--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.0.2/dist/confetti.browser.min.js"></script>
     <script src="./app.js"></script>
 </head>
+
 <body>
     <div class="loading">
         <h2>2018</h2>
@@ -16,10 +18,21 @@
         <h2>2019</h2>
     </div>
     <div class="center">
-        <div><h2>Happy Birthday</h2></div>
+        <div>
+            <h2>Happy Birthday</h2>
+        </div>
         <div></div>
-        <div><h2>Name...</h2></div>
+        <div>
+            <h2>Name...</h2>
+        </div>
         <div></div>
     </div>
+    <div class='song'>
+        <audio id='birthday-song' loop='true' src="./public/Happy-birthday-piano-music.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+        </audio>
+    </div>
 </body>
+
 </html>
