--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Happy Birthday</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.0.2/dist/confetti.browser.min.js"></script>
     <script src="./app.js"></script>
-</head>
+  </head>
 
-<body>
-    <div class="loading">
-        <h2>2018</h2>
-        <div class="bar"></div>
-        <h2>2019</h2>
+  <body>
+    <div id="present">
+      <img
+        id="gift"
+        src="./public/images/birthday-present.svg"
+        alt="Birthday Gift Icon that is clickable"
+        height="150px"
+      />
     </div>
     <div class="center">
-        <div>
-            <h2>Happy Birthday</h2>
-        </div>
-        <div></div>
-        <div>
-            <h2>Name...</h2>
-        </div>
-        <div></div>
+      <div><h2>Happy Birthday</h2></div>
+      <div></div>
+      <div><h2>Name...</h2></div>
+      <div></div>
     </div>
-    <div class='song'>
-        <audio id='birthday-song' loop='true' src="./public/Happy-birthday-piano-music.mp3">
-            Your browser does not support the
-            <code>audio</code> element.
-        </audio>
+    <div class="song">
+      <audio
+        id="birthday-song"
+        loop="true"
+        src="./public/musics/Happy-birthday-piano-music.mp3"
+      >
+        Your browser does not support the <code>audio</code> element.
+      </audio>
     </div>
-</body>
-
+  </body>
 </html>
