fade effect and click event

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         height="150px"
       />
     </div>
-    <div class="center">
+    <div id="main">
       <div><h2>Happy Birthday</h2></div>
       <div></div>
       <div><h2>Name...</h2></div>
