add in css grid also the date

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div><h2>Name...</h2></div>
       <div></div>
     </div>
+    <div class="date"><h1>2/22/2019</h1></div>
     <div class="song">
       <audio
         id="birthday-song"
