change name and date

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="main">
       <div><h2>Happy Birthday</h2></div>
       <div></div>
-      <div><h2>铭诗</h2></div>
+      <div><h2>邹秀琴</h2></div>
       <div></div>
     </div>
-    <div class="date"><h1>2/22/2019</h1></div>
+    <div class="date"><h1>5/7/2019</h1></div>
     <div class="song">
       <audio
         id="birthday-song"
