--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Happy Birthday</title>
+    <title>Im Sorry</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@0.0.2/dist/confetti.browser.min.js"></script>
@@ -20,20 +20,21 @@
       />
     </div>
     <div id="main">
-      <div><h2>Happy Birthday</h2></div>
+      <div><h2>I'm Sorry</h2></div>
       <div></div>
-      <div><h2>邹秀琴</h2></div>
+      <div><h2>阿雅</h2></div>
       <div></div>
     </div>
-    <div class="date"><h1>5/7/2019</h1></div>
-    <div class="song">
+    <!-- <div class="date"><h1>5/7/2019</h1></div> -->
+    <img id="sorry-dog" src="public/images/sorry-dog.png" />
+    <!-- <div class="song">
       <audio
         id="birthday-song"
         loop="true"
         src="./public/musics/Happy-birthday-piano-music.mp3"
       >
         Your browser does not support the <code>audio</code> element.
-      </audio>
+      </audio> -->
     </div>
   </body>
 </html>
